src/objects/Apttus__IDEProvision__c.object
<CustomObject>
    <description>Holds information about one or more provisions supported by the IDE provider</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The active indicator for the IDE provision</description>
        <inlineHelpText>Please use this indicator to enable or disable the IDE provision</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The provision description</description>
        <inlineHelpText>The provision description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldNumber__c</fullName>
        <description>The IDE field number</description>
        <inlineHelpText>The IDE field number</inlineHelpText>
        <label>Field Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEName__c</fullName>
        <description>The name of the IDE provider</description>
        <externalId>true</externalId>
        <inlineHelpText>The name of the IDE provider</inlineHelpText>
        <label>IDE Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IDE Provision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>